added background images to all html pages

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles/styles.css" />
     <title>Anika &verbar; Vancouver&dash;based developer</title>
 </head>
-<body>
+<body class="body__bg--lionsgate">
     
 </body>
 </html>
