added new image on asset, added header on index.html and fixed layout on header

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="./assets/yellow-favicon-trim.svg" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap"
@@ -10,8 +10,37 @@
     />
     <link rel="stylesheet" href="./styles/styles.css" />
     <title>Anika &verbar; Vancouver&dash;based developer</title>
-</head>
-<body class="body__bg--glass">
-    
-</body>
+  </head>
+  <body class="body__bg--glass">
+    <header>
+      <div class="header container">
+        <div class="logo">
+          <a href="./index.html">anikacustod&period;io</a>
+        </div>
+        <div class="nav">
+          <div class="mobile">
+            <button class="mobile__ham"></button>
+            <nav class="mobile__navbar">
+              <ul>
+                <li><a class="mobile__navbar-link" href="./index.html">home</a></li>
+                <li><a class="mobile__navbar-link" href="./about.html">about</a></li>
+                <li><a class="mobile__navbar-link" href="./projects.html">projects</a></li>
+                <li><a class="mobile__navbar-link" href="./contact.html">contact</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="full">
+            <nav class="full__navbar">
+              <ul>
+                <li><a class="full__navbar-link" href="./index.html">home</a></li>
+                <li><a class="full__navbar-link" href="./about.html">about</a></li>
+                <li><a class="full__navbar-link" href="./projects.html">projects</a></li>
+                <li><a class="full__navbar-link" href="./contact.html">contact</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
