finished animation, added bg image and finished javascript for mobile menu

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               </ul>
             </nav>
           </div>
-          <div class="full">
+          <!-- <div class="full">
             <nav class="full__navbar">
               <ul>
                 <li><a class="full__navbar-link" href="./index.html">home</a></li>
@@ -38,9 +38,10 @@
                 <li><a class="full__navbar-link" href="./contact.html">contact</a></li>
               </ul>
             </nav>
-          </div>
+          </div> -->
         </div>
       </div>
     </header>
+    <script src="./scripts/mobileMenu.js"></script>
   </body>
 </html>
