--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,37 @@
     <title>Anika &verbar; Vancouver&dash;based developer</title>
 </head>
 <body class="body__bg--lionsgate">
+  <header>
+    <div class="header container">
+      <div class="logo">
+        <a href="./index.html">anikacustod&period;io</a>
+      </div>
+      <div class="nav">
+        <div class="mobile">
+          <button class="mobile__ham"></button>
+          <nav class="mobile__navbar">
+            <ul>
+              <li><a class="mobile__navbar-link" href="./index.html">home</a></li>
+              <li><a class="mobile__navbar-link" href="./about.html">about</a></li>
+              <li><a class="mobile__navbar-link" href="./projects.html">projects</a></li>
+              <li><a class="mobile__navbar-link" href="./contact.html">contact</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="full">
+          <nav class="full__navbar">
+            <ul>
+              <li><a class="full__navbar-link" href="./index.html">home</a></li>
+              <li><a class="full__navbar-link" href="./about.html">about</a></li>
+              <li><a class="full__navbar-link" href="./projects.html">projects</a></li>
+              <li><a class="full__navbar-link" href="./contact.html">contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </header>
+  <script src="./scripts/mobileMenu.js"></script>
     
 </body>
 </html>
