--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         </div>
       </div>
     </header>
+    <main class="title">
+      <h1 class="appear">anika</h1>
+      <h2>custodi<img class="donut rotate" src="./assets/yellow-donut.png" alt="yellow donut"></h2>
+      <span class="description">Vancouver&dash;based developer</span>
+    </main>
     <script src="./scripts/mobileMenu.js"></script>
   </body>
 </html>
