added animation for h1

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
       </div>
     </header>
-    <main class="title">
+    <main class="index">
       <h1 class="appear">anika</h1>
       <h2>custodi<img class="donut rotate" src="./assets/yellow-donut.png" alt="yellow donut"></h2>
       <span class="description">Vancouver&dash;based developer</span>
