fixed bg for projects.html, added mock up img, added flickity carousel

--- a/projects.html
+++ b/projects.html
@@ -8,10 +8,12 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./styles/flickity.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css"> -->
     <link rel="stylesheet" href="./styles/styles.css" />
     <title>Anika &verbar; Vancouver&dash;based developer</title>
 </head>
-<body class="body__bg--glass">
+<body>
   <header>
     <div class="header container">
       <div class="logo">
@@ -42,6 +44,43 @@
       </div>
     </div>
   </header>
+  <main class="title body__bg--glass">
+    <h1 class="appear">pr<img class="donut rotate" src="./assets/yellow-donut.png" alt="yellow donut">jects</h1>
+  </main>
+  <div id="projects" class="projects">
+    <div class="main-carousel container">
+      <div class="carousel-cell">
+        <img src="./assets/bandsite-shows.png" alt="bandsite">
+        <h2>bandsite</h2>
+        <p>
+          <span>This is a bandsite built using html5, css3, scss and javascript</span>
+
+        </p>
+        <!-- bandsite -->
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/brainflix.png" alt="brainflix">
+        <h2>brainflix</h2>
+        <p>
+          <span>This is a youtube clone built using html5, css3, scss, javascript, react, node and express</span>
+          
+        </p>
+        <!-- brainflix -->
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/money-hack.png" alt="money hack">
+        <h2>money hack</h2>
+        <p>
+          <span>This is a budgeting web app built using html5, css3, scss, javascript, react, node and express</span>
+          
+        </p>
+        <!-- money hack -->
+      </div>
+    </div>
+  </div>
   <script src="./scripts/mobileMenu.js"></script>
+  <script src="./scripts/flickity.js"></script>
+  <!-- <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script> -->
+  <script src="./scripts/initializeCarousel.js"></script> 
 </body>
 </html>
