--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./styles/styles.css" />
     <title>Anika &verbar; Vancouver&dash;based developer</title>
 </head>
-<body class="body__bg--glass">
+<body>
   <header>
     <div class="header container">
       <div class="logo">
@@ -42,6 +42,9 @@
       </div>
     </div>
   </header>
+  <main class="title body__bg--glass">
+    <h1 class="appear">ab<img class="donut rotate" src="./assets/yellow-donut.png" alt="yellow donut">ut</h1>
+  </main>
   <script src="./scripts/mobileMenu.js"></script>
 </body>
 </html>
