changed project image for mobile view and large screen view

--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/flickity.css">
-    <!-- <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css"> -->
     <link rel="stylesheet" href="./styles/styles.css" />
     <title>Anika &verbar; Vancouver&dash;based developer</title>
 </head>
@@ -50,37 +49,33 @@
   <div id="projects" class="projects">
     <div class="main-carousel container">
       <div class="carousel-cell">
-        <img src="./assets/bandsite-shows.png" alt="bandsite">
+        <img class="carousel-cell__mobile" src="./assets/bandsite-mobile.png" alt="bandsite">
+        <img class="carousel-cell__full" src="./assets/bandsite-shows.png" alt="bandsite">
         <h2>bandsite</h2>
         <p>
           <span>This is a bandsite built using html5, css3, scss and javascript</span>
-
         </p>
-        <!-- bandsite -->
       </div>
       <div class="carousel-cell">
-        <img src="./assets/brainflix.png" alt="brainflix">
+        <img class="carousel-cell__mobile" src="./assets/brainflix-mobile.png" alt="brainflix">
+        <img class="carousel-cell__full" src="./assets/brainflix.png" alt="brainflix">
         <h2>brainflix</h2>
         <p>
-          <span>This is a youtube clone built using html5, css3, scss, javascript, react, node and express</span>
-          
+          <span>This is a youtube clone built using html5, css3, scss, javascript, react, node and express</span>          
         </p>
-        <!-- brainflix -->
       </div>
       <div class="carousel-cell">
-        <img src="./assets/money-hack.png" alt="money hack">
+        <img class="carousel-cell__mobile" src="./assets/moneyhack-mobile.png" alt="money hack">
+        <img class="carousel-cell__full" src="./assets/money-hack.png" alt="money hack">
         <h2>money hack</h2>
         <p>
-          <span>This is a budgeting web app built using html5, css3, scss, javascript, react, node and express</span>
-          
+          <span>This is a budgeting web app built using html5, css3, scss, javascript, react, node and express</span>          
         </p>
-        <!-- money hack -->
       </div>
     </div>
   </div>
   <script src="./scripts/mobileMenu.js"></script>
   <script src="./scripts/flickity.js"></script>
-  <!-- <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script> -->
   <script src="./scripts/initializeCarousel.js"></script> 
 </body>
 </html>
