fixed size of octocat icon and computer icon, added links to projects

--- a/projects.html
+++ b/projects.html
@@ -87,13 +87,17 @@
             src="./assets/bandsite-shows.png"
             alt="bandsite"
           />
-          <div>
+          <div class="projects-info">
             <h2>bandsite</h2>
             <p>
               <span>
                 This is a bandsite built using html5, css3, scss and
                 javascript
               </span>
+              <div>
+                <a href="https://github.com/anikawebdev/anika-custodio-bandsite" target="_blank"><img class="github" src="./assets/icons8-octocat.svg" alt="bandsite github"></a>
+              <a href="https://anicusdev.io/anika-custodio-bandsite/sprint-three/index.html" target="_blank"><img class="live" src="./assets/icons8-computer-60.png" alt="bandsite live site"></a>
+              </div>
             </p>
           </div>
         </div>
@@ -108,13 +112,17 @@
             src="./assets/brainflix.png"
             alt="brainflix"
           />
-          <div>
+          <div class="projects-info">
             <h2>brainflix</h2>
             <p>
               <span>
                 This is a youtube clone built using html5, css3, scss,
                 javascript, react, node and express
               </span>
+              <div>
+                <a href="https://github.com/anikawebdev/anika-custodio-bandsite" target="_blank"><img class="github" src="./assets/icons8-octocat.svg" alt="bandsite github"></a>
+              <a href="https://anicusdev.io/anika-custodio-bandsite/sprint-three/index.html" target="_blank"><img class="live" src="./assets/icons8-computer-60.png" alt="bandsite live site"></a>
+              </div>
             </p>
           </div>
         </div>
@@ -129,13 +137,17 @@
             src="./assets/money-hack.png"
             alt="money hack"
           />
-          <div>
+          <div class="projects-info">
             <h2>money hack</h2>
             <p>
               <span>
                 This is a budgeting web app built using html5, css3, scss,
                 javascript, react, node and express
               </span>
+              <div>
+                <a href="https://github.com/anikawebdev/anika-custodio-bandsite" target="_blank"><img class="github" src="./assets/icons8-octocat.svg" alt="bandsite github"></a>
+              <a href="https://anicusdev.io/anika-custodio-bandsite/sprint-three/index.html" target="_blank"><img class="live" src="./assets/icons8-computer-60.png" alt="bandsite live site"></a>
+              </div>
             </p>
           </div>
         </div>
