finished contact page and fixed bg on pages

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,25 @@
   <main class="title body__bg--glass">
     <h1 class="appear">c<img class="donut rotate" src="./assets/yellow-donut.png" alt="yellow donut">ntact</h1>
   </main>
+  <div class="contact body__bg--lionsgate">
+    <div class="contact__content container">
+      <p>
+        Tell me about your project&colon; what you want and what you
+        need&period; Let me help you bring your ideas to life&period;
+      </p>
+      <p>
+        <span class="label">Location</span>
+        <span>Greater Vancouver&comma; British Columbia</span>
+      </p>
+      <p>
+        <span class="label">Email</span>
+        <span>hello&commat;anicusdev&period;io</span>        
+      </p>
+      <div>
+        <a href="mailto:hello@anicusdev.io">Send an email</a>
+      </div>
+    </div>
+  </div>
   <script src="./scripts/mobileMenu.js"></script>
-    
 </body>
 </html>
