--- a/projects.html
+++ b/projects.html
@@ -120,8 +120,8 @@
                 javascript, react, node and express
               </span>
               <div>
-                <a href="https://github.com/anikawebdev/anika-custodio-bandsite" target="_blank"><img class="github" src="./assets/icons8-octocat.svg" alt="bandsite github"></a>
-              <a href="https://anicusdev.io/anika-custodio-bandsite/sprint-three/index.html" target="_blank"><img class="live" src="./assets/icons8-computer-60.png" alt="bandsite live site"></a>
+                <a href="https://github.com/anikawebdev/anika-custodio-brainflix" target="_blank"><img class="github" src="./assets/icons8-octocat.svg" alt="bandsite github"></a>
+              <a href="" target="_blank"><img class="live" src="./assets/icons8-computer-60.png" alt="bandsite live site"></a>
               </div>
             </p>
           </div>
@@ -145,8 +145,8 @@
                 javascript, react, node and express
               </span>
               <div>
-                <a href="https://github.com/anikawebdev/anika-custodio-bandsite" target="_blank"><img class="github" src="./assets/icons8-octocat.svg" alt="bandsite github"></a>
-              <a href="https://anicusdev.io/anika-custodio-bandsite/sprint-three/index.html" target="_blank"><img class="live" src="./assets/icons8-computer-60.png" alt="bandsite live site"></a>
+                <a href="https://github.com/anikawebdev/anika-custodio-capstone-project" target="_blank"><img class="github" src="./assets/icons8-octocat.svg" alt="bandsite github"></a>
+              <a href="https://money-hack.anicusdev.io/" target="_blank"><img class="live" src="./assets/icons8-computer-60.png" alt="bandsite live site"></a>
               </div>
             </p>
           </div>
