changed email info

--- a/contact.html
+++ b/contact.html
@@ -57,10 +57,10 @@
       </p>
       <p>
         <span class="label">Email</span>
-        <span>hello&commat;anicusdev&period;io</span>        
+        <span>hello&commat;anikacustod&period;io</span>        
       </p>
       <div>
-        <a href="mailto:hello@anicusdev.io">Send an email</a>
+        <a href="mailto:hello@anikacustod.io">Send an email</a>
       </div>
     </div>
   </div>
